<resources>
    <string name="app_name">Visualisation</string>
    <string name="vueCla">Classique</string>
    <string name="vueStat">Fiches</string>
    <string name="vueComp">Comparateur</string>
    <string name="location">Entrez le pays de votre choix</string>
    <string name="action_day_view">Un jour</string>
    <string name="action_three_day_view">3 jours</string>
    <string name="action_week_view">Une semaine</string>
    <string name="today">Aller à</string>
    <string name="first_class">Premier Cours</string>
    <string name="return_activity">retour</string>
    <string name="Titre">Gym Suédoise</string>
    <string name="afficher_le_calendrier">Afficher le calendrier</string>
    <string name="classroom">Salles </string>
    <string name="ClassroomCoordinates">Coordonnées GPS : </string>
    <string name="ClassroomServices">Services Proposés : </string>
    <string name="ClassroomType">Type de Classe : </string>
    <string name="ClassroomCapacity">Capacité : </string>
    <string name="ClassroomDescription">Description : </string>
    <string name="nextWeek">Semaine Prochaine</string>
    <string name="previousWeek">Semaine Précédente</string>
    <string name="intensityfilter">filtres d\'intensites</string>
    <string name="calendarFilter">Afiicher le Calendrier selon :</string>
    <string name="validate">valider</string>
    <string name="cancel">anuler</string>
    <string name="urlValid">Url Valide</string>
    <string name="urlInvalid">Url Invalide</string>
    <string name="classe">Cours</string>
    <string name="startHour">heure de debut</string>
    <string name="horaries">horraires</string>
    <string name="allez_aux_fiches">Consulter les profils</string>
    <string name="ErrorSelectClassroom">Veuillez choisir une salle de classe</string>
    <string name="endHour">heure de fin</string>
    <string name="activityName">Nom de l\'activité :</string>
    <string name="activityDescription">Description Activité :</string>
    <string name="Capacity">Capacité :</string>
    <string name="classSane">Cours sans erreurs</string>
    <string name="switchIntensity">Filtrer par intensité</string>
    <string name="staffFIlter">Filtrer par professeur :</string>
    <string name="rechercher_ces_salles">Rechercher ces salles</string>
    <string name="status_ok">Status Ok</string>
    <string name="day">Jour</string>
    <string name="days">Jours</string>
    <string name="TBTitle">Gym suédoise</string>
    <string name="rayon_question">Sélectionnez le rayon de recherche :</string>
    <string name="calendarLength">Taille du Calendrier</string>
    <string name="liste_d_erreurs">Liste d\'erreurs</string>
    <string name="defaultadress">Staff adress</string>
    <string name="Defaultmail">Staff Email</string>
    <string name="DefaultRole">Staff Role</string>
    <string name="Defaultnamestaff">Staff Name</string>
    <string name="classroom2">Classroom</string>
    <string name="separator">|</string>
    <string name="cal">Aller au calendrier</string>
    <string name="hour">heure</string>
    <string name="minute">min</string>
    <string name="hourSelect">selectionez l\'heure</string>
    <string name="next3Days">Afficher les 3 prochains jours</string>
    <string name="nextDay">Afficher le jour suivant</string>
    <string name="previous3Days">Afficher les 3 jours précédent</string>
    <string name="previousDay">Afficher le jour précédent</string>
    <string name="selectedClassParameters">Salles selectionés:</string>

</resources>
