<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutTop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="false"
    android:visibility="visible">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="visible"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/pathUp"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/ic_keyboard_return_black" />

        <TextView
            android:id="@+id/tLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lLocation"
            android:layout_alignLeft="@id/pathUp"
            android:layout_alignStart="@id/pathUp"
            android:layout_below="@id/pathUp"
            android:background="@drawable/tvborder"
            android:text="Selectionnez les salles voulus"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/toolbar"
            android:padding="10dp"
            android:gravity="center_horizontal" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchIntensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:checked="true"
            android:text="@string/switchIntensity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHighlight="@color/jaunegs"
            android:textColorHint="@color/jaunegs"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:layout_toRightOf="@+id/tLocation"
            android:background="@drawable/tvborder"
            android:text="Selectionnez une intensité"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/toolbar"
            android:visibility="visible"
            android:padding="10dp"
            android:layout_below="@+id/switchIntensity"
            android:gravity="center_horizontal" />

        <ListView
            android:id="@+id/lLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/tLocation"
            android:layout_alignLeft="@+id/tLocation"
            android:layout_alignRight="@+id/tLocation"
            android:layout_alignStart="@+id/tLocation"
            android:layout_alignTop="@+id/lvIntensity"
            android:background="@drawable/border"
            android:choiceMode="singleChoice"
            android:layout_marginBottom="30dp" />


        <ListView
            android:id="@+id/lvIntensity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:background="@drawable/border"
            android:choiceMode="singleChoice"
            android:visibility="visible"
            android:layout_marginBottom="30dp" />

        <ListView
            android:id="@+id/lTeacher"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/profText"
            android:layout_alignLeft="@+id/profText"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/profText"
            android:layout_alignStart="@+id/profText"
            android:layout_alignTop="@+id/lvIntensity"
            android:background="@drawable/border"
            android:choiceMode="singleChoice"
            android:visibility="visible"
            android:layout_marginBottom="30dp" />
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignLeft="@+id/tLocation"-->
        <!--android:layout_alignStart="@+id/tLocation"-->
        <!--android:layout_above="@+id/tLocation" />-->

        <TextView
            android:id="@+id/profText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lTeacher"
            android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:background="@drawable/tvborder"
            android:text="Selectionnez un professeur"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/toolbar"
            android:visibility="visible"
            android:padding="10dp"
            android:gravity="center_horizontal" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchStaff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/profText"
            android:layout_alignEnd="@+id/profText"
            android:layout_alignLeft="@+id/profText"
            android:layout_alignRight="@+id/profText"
            android:layout_alignStart="@+id/profText"
            android:checked="true"
            android:text="@string/staffFIlter"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentTop="false"
            android:layout_alignTop="@+id/switchIntensity"
            android:layout_marginBottom="10dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectedClassParameters"
            android:id="@+id/textView4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/toolbar"
            android:background="@drawable/tvborder"
            android:layout_alignTop="@+id/textView"
            android:padding="10dp"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout"
            android:gravity="center_horizontal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:background="@drawable/border"
            android:visibility="visible"
            android:layout_alignStart="@id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_alignRight="@+id/textView4"
            android:layout_alignEnd="@+id/textView4"
            android:layout_above="@+id/linearLayout"
            android:layout_marginBottom="30dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:gravity="bottom|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/popupdial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choisissez une date"
                android:theme="@style/AppTheme.Button"
                android:visibility="visible" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Afficher le calendrier"
                android:theme="@style/AppTheme.Button"
                android:visibility="visible"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>


